[gd_scene load_steps=12 format=3 uid="uid://jewwwu177llf"]

[ext_resource type="Script" path="res://scripts/characters/Player.gd" id="1_6krak"]
[ext_resource type="Texture2D" uid="uid://bsi6ve12ivr32" path="res://icon.svg" id="1_dwbxt"]
[ext_resource type="PackedScene" uid="uid://b1uiombvrf6e3" path="res://scenes/components/health_component.tscn" id="3_lbwp4"]
[ext_resource type="PackedScene" uid="uid://8lwpo77s3ckh" path="res://scenes/components/hurtbox_component.tscn" id="4_75d1s"]
[ext_resource type="PackedScene" uid="uid://tqgfss6672v2" path="res://scenes/components/velocity_component.tscn" id="5_x8hrj"]
[ext_resource type="PackedScene" uid="uid://dv57pmhj1tvof" path="res://scenes/components/knockback_component.tscn" id="6_5p6ja"]
[ext_resource type="Script" path="res://scripts/components/WepMoveComponent.gd" id="7_0k5hj"]
[ext_resource type="PackedScene" uid="uid://5o4dhd2c5m3h" path="res://scenes/components/player_movement_component.tscn" id="7_ua4er"]
[ext_resource type="PackedScene" uid="uid://moqf23a3kmv3" path="res://scenes/weapons/minigun.tscn" id="9_vtkt6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ry1ci"]
size = Vector2(144, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmoro"]
size = Vector2(36, 65)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("wep_move_component", "knockback_component", "player_movement_component", "starting_weapon")]
motion_mode = 1
script = ExtResource("1_6krak")
wep_move_component = NodePath("WepMoveComponent")
knockback_component = NodePath("KnockbackComponent")
player_movement_component = NodePath("PlayerMovementComponent")
starting_weapon = NodePath("Minigun")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.5)
texture = ExtResource("1_dwbxt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.25, 0.5)
shape = SubResource("RectangleShape2D_ry1ci")

[node name="HealthComponent" parent="." instance=ExtResource("3_lbwp4")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_75d1s")]
collision_layer = 2
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_hmoro")

[node name="VelocityComponent" parent="." instance=ExtResource("5_x8hrj")]

[node name="KnockbackComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("6_5p6ja")]
velocity_component = NodePath("../VelocityComponent")

[node name="WepMoveComponent" type="Node2D" parent="."]
script = ExtResource("7_0k5hj")

[node name="PlayerMovementComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("7_ua4er")]
velocity_component = NodePath("../VelocityComponent")

[node name="Minigun" parent="." instance=ExtResource("9_vtkt6")]
